change audio code

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		};
 
 		supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+		<audio src="./Audio.m4a" id="my-audio" loop="loop"></audio>
 </head>
 
 <body class="demo-1 loading">
-	<audio src="Audio.m4a" id="my-audio" loop="loop" autoplay="autoplay"></audio>
 	<main>
 		<div class="message">Please view this demo on a desktop to see the effect.</div>
 		<div class="frame">
