--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="demo-1 loading">
-	<audio src="./Audio.m4a" id="my-audio" loop="loop" autoplay="autoplay"></audio>
+	<audio src="./Audio.m4a" id="my-audio" loop="loop"></audio>
 	<main>
 		<div class="message">Please view this demo on a desktop to see the effect.</div>
 		<div class="frame">
