change photo and posititon

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 				</div>
 			</div>
 			<h2 class="content__title no-select">
-				<span>Love</span>
+				<span>8/3</span>
 			</h2>
 			<h2 class="content__title no-select">
-				<span class="content__title-sub">Chúc em 8/3 xinh đẹp và vui vẻ</span>
+				<span class="content__title-sub">Wish you always happy and pretty</span>
 			</h2>
 		</div>
 	</main>
