--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 				<span>8/3</span>
 			</h2>
 			<h2 class="content__title no-select">
-				<span class="content__title-sub">Wish you always happy and pretty</span>
+				<span class="content__title-sub">Wishing you happiness today, tomorrow and always
+ 				</span>
 			</h2>
 		</div>
 	</main>
