--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 			<h2 class="content__title no-select">
-				<span>8/3</span>
+				<span>Happy Women's Day</span>
 			</h2>
 			<h2 class="content__title no-select">
 				<span class="content__title-sub">Wishing you happiness today, tomorrow and always
@@ -71,11 +71,7 @@
 		<circle class="cursor__inner" cx="40" cy="40" r="20"></circle>
 	</svg>
 	<button class="btn-audio" onclick="playAudio()">Music</button>
-	<script type="text/javascript">
-		window.onload = function () {
-			document.getElementById("my-audio").play();
-		}
-		
+	<script type="text/javascript">		
 		function playAudio() {
 			document.getElementById("my-audio").play();
 		}
